--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     build: ./backend
-    image: ${{ secrets.DOCKER_USERNAME }}/backend-app:latest
+    image: "${DOCKER_USERNAME}/backend-app:latest"
     ports:
       - "5000:5000"
     environment:
@@ -11,7 +11,7 @@ services:
 
   frontend:
     build: ./frontend
-    image: ${{ secrets.DOCKER_USERNAME }}/frontend-app:latest
+    image: "${DOCKER_USERNAME}/frontend-app:latest"
     ports:
       - "3000:3000"
     depends_on:
@@ -20,3 +20,7 @@ services:
       - REACT_APP_BACKEND_URL=http://backend:5000
     networks:
       - app-network
+
+networks:
+  app-network:
+    driver: bridge
